# video-audio-quality-evaluate

./: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h  README.md  ffmHead.h  main.cpp  useCurl.h
tests/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp
